<resources>
    <string name="app_name">Vacunas</string>
    <string name="welcome">Bienvenido</string>
    <!---Pre-Register-->
    <string name="pre_reg_start">Iniciemos creando tu cuenta</string>
    <string name="pre_reg_family_register">posteriormente podras registrar a tus familiares (hijos, padres o cualquier familiar)</string>

    <!---Register-->
    <string name="register_gen_info">Informacion general</string>
    <string name="register_birth_info">Informacion de tu nacimiento</string>
    <string name="register_login_info">Informacion de inicio de sesion</string>
    <string name="name">Nombre*</string>
    <string name="last_name_F">Apellido Paterno*</string>
    <string name="last_name_M">Apellido Materno*</string>
    <string name="gender">Sexo*</string>
    <string name="birthdate">Fecha de nacimiento: (00/00/0000)*</string>
    <string name="weight">Peso al nacer (0.0Kg)</string>
    <string name="edad_gestal">Edad gestal</string>
    <string name="blood_type">Tipo de sangre:</string>
    <string name="email_required">Correo electronico*</string>
    <string name="password_required">Contrasenia*</string>
    <string name="register">Registrarse</string>

    <!---New Vaccines Dosis-->
    <string name="Esquema">Esquema de vacunacion</string>
    <string name="EsquemaEditText">Refuerzo</string>
    <string name="Date_vac">Fecha de vacunacion</string>
    <string name="DateEditText">10/09/2021</string>
    <string name="marca">Marca</string>
    <string name="marcaEditText">Pfizer</string>
    <string name="numeroLote">Numero de lote</string>
    <string name="numeroLoteEditText">00381233 (may/2021)</string>
    <string name="doctor">Doctor</string>
    <string name="doctorEditText">Dr. Vargas</string>
    <string name="centroAplicacion">Centro de aplicacion</string>
    <string name="centroAplicacionEditText">Centro de salud n03</string>
    <string name="domicilio">Domicilio</string>
    <string name="domicilioEditText">Calle 105, Mza. 35, SM. 95, Benito Juarez 77534, Cancun QROO</string>

    <!---Information-->
    <string name="birthdate_info">Fecha de nacimiento:</string>
    <string name="weight_info">Peso al nacer:</string>
    <string name="sex_info">Sexo:</string>
    <string name="edad_gestacional_info">Edad gestacional:</string>

    <string name="read_article">Leer articulo</string>

    <string name="email">Correo electronico</string>
    <string name="password">Contrasenia</string>
    <string name="login">INICIAR SESION</string>
    <string name="remember_account">Recordar cuenta</string>
    <string name="recover_account">Recuperar cuenta</string>
    <string name="recover_acc_email">Correo electronico asociado*</string>
    <string name="recover">Recuperar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="bottom_information">Informacion</string>
    <string name="bottom_vaccine">Vacunas</string>
    <string name="bottom_news">Noticias</string>
    <string name="title_activity_nav_drawer">navDrawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
</resources>
