<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/container"
            android:visibility="visible">
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/register_container"
            android:visibility="gone">

            <include layout="@layout/toolbar_white_back"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/registro_pfp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="bottom"
                android:layout_marginTop="50dp"
                android:layout_marginStart="16dp"
                android:text="@string/register_gen_info"
                android:textColor="@color/blue"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:hint="@string/name"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_F"
                android:hint="@string/last_name_F"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/last_name_M"
                android:hint="@string/last_name_M"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gender"
                android:hint="@string/gender"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/birthdate"
                android:hint="@string/birthdate"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:text="@string/register_birth_info"
                android:textColor="@color/blue"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/weight"
                android:hint="@string/weight"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edad_gestal"
                android:hint="@string/edad_gestal"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/blood_type"
                android:hint="@string/blood_type"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="bottom"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:text="@string/register_login_info"
                android:textColor="@color/blue"
                android:textSize="18sp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email_required"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:hint="@string/password_required"
                android:background="@drawable/round_corner"
                android:textColorHint="@color/gray"
                android:textColor="@color/black"
                android:layout_margin="16dp"
                android:padding="20dp"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="50dp"
                android:padding="20dp"
                android:textSize="20sp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:backgroundTint="@color/blue"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>