<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/toolbar_white_x"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/pre_reg_start"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="22sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pre_reg_family_register"
            android:textColor="@color/blue_gray"
            android:textSize="17sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pre_registro"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="50dp"
            android:padding="20dp"
            android:id="@+id/go_to_register"
            android:textSize="20sp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:backgroundTint="@color/blue"/>

    </LinearLayout>

</FrameLayout>